packages/libobscur/check_errors.txt
    Checking libobscur v0.1.0 (E:\Web Project\experimental-workspace\newstart\packages\libobscur)
error[E0753]: expected outer doc comment
 --> src\lib.rs:2:1
  |
2 | //! libobscur
  | ^^^^^^^^^^^^^
  |
  = note: inner doc comments like this (starting with `//!` or `/*!`) can only appear before items
help: you might have meant to write a regular comment
  |
2 - //! libobscur
2 + // libobscur
  |

error[E0753]: expected outer doc comment
 --> src\lib.rs:3:1
  |
3 | //! 
  | ^^^^
  |
  = note: inner doc comments like this (starting with `//!` or `/*!`) can only appear before items
help: you might have meant to write a regular comment
  |
3 - //! 
3 + // 
  |

error[E0753]: expected outer doc comment
 --> src\lib.rs:4:1
  |
4 | //! This crate contains the shared core logic for the Obscur project.
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: inner doc comments like this (starting with `//!` or `/*!`) can only appear before items
help: you might have meant to write a regular comment
  |
4 - //! This crate contains the shared core logic for the Obscur project.
4 + // This crate contains the shared core logic for the Obscur project.
  |

error[E0753]: expected outer doc comment
 --> src\lib.rs:5:1
  |
5 | //! It is designed to be cross-platform, compiling to native binaries via Tauri
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: inner doc comments like this (starting with `//!` or `/*!`) can only appear before items
help: you might have meant to write a regular comment
  |
5 - //! It is designed to be cross-platform, compiling to native binaries via Tauri
5 + // It is designed to be cross-platform, compiling to native binaries via Tauri
  |

error[E0753]: expected outer doc comment
 --> src\lib.rs:6:1
  |
6 | //! and eventually to other platforms using Uniffi/Kotlin/Swift.
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: inner doc comments like this (starting with `//!` or `/*!`) can only appear before items
help: you might have meant to write a regular comment
  |
6 - //! and eventually to other platforms using Uniffi/Kotlin/Swift.
6 + // and eventually to other platforms using Uniffi/Kotlin/Swift.
  |

warning: unused import: `secp256k1::hashes::sha256`
 --> src\crypto\nip01.rs:2:5
  |
2 | use secp256k1::hashes::sha256;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Secp256k1`
 --> src\crypto\nip04.rs:1:17
  |
1 | use secp256k1::{Secp256k1, SecretKey, PublicKey};
  |                 ^^^^^^^^^

warning: unused import: `Secp256k1`
 --> src\crypto\nip44.rs:1:17
  |
1 | use secp256k1::{Secp256k1, SecretKey, PublicKey};
  |                 ^^^^^^^^^

warning: unused import: `nip01`
 --> src\crypto\nip17.rs:2:28
  |
2 | use crate::crypto::{nip44, nip01};
  |                            ^^^^^

warning: unused import: `hex`
 --> src\crypto\nip17.rs:3:5
  |
3 | use hex;
  |     ^^^

error[E0599]: no method named `sign_schnorr` found for struct `Secp256k1<C>` in the current scope
   --> src\crypto\nip01.rs:40:20
    |
 40 |     let sig = secp.sign_schnorr(&message, &keypair);
    |                    ^^^^^^^^^^^^
    |
help: there is a method `sign_schnorr_with_rng` with a similar name, but with different arguments
   --> C:\Users\Administrator\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\secp256k1-0.29.1\src\schnorr.rs:150:5
    |
150 | /     pub fn sign_schnorr_with_rng<R: Rng + CryptoRng>(
151 | |         &self,
152 | |         msg: &Message,
153 | |         keypair: &Keypair,
154 | |         rng: &mut R,
155 | |     ) -> Signature {
    | |__________________^

error[E0599]: no function or associated item named `new` found for struct `Encryptor<C>` in the current scope
  --> src\crypto\nip04.rs:42:32
   |
42 |     let cipher = Aes256CbcEnc::new(&shared_secret.into(), &iv.into());
   |                                ^^^ function or associated item not found in `Encryptor<Aes256>`
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `KeyIvInit` which provides `new` is implemented but not in scope; perhaps you want to import it
   |
 1 + use aes::cipher::KeyIvInit;
   |

error[E0599]: no function or associated item named `new` found for struct `Decryptor<C>` in the current scope
  --> src\crypto\nip04.rs:81:32
   |
81 |     let cipher = Aes256CbcDec::new(&shared_secret.into(), (&iv[..16]).into());
   |                                ^^^ function or associated item not found in `Decryptor<Aes256>`
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `KeyIvInit` which provides `new` is implemented but not in scope; perhaps you want to import it
   |
 1 + use aes::cipher::KeyIvInit;
   |

Some errors have detailed explanations: E0599, E0753.
For more information about an error, try `rustc --explain E0599`.
warning: `libobscur` (lib) generated 5 warnings
error: could not compile `libobscur` (lib) due to 8 previous errors; 5 warnings emitted
